# AI_Infra_Handbook

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  vercel.json
docs/: guide.md  (+1 more)
docs/01-foundation/computer-networks/mini-demo/: README.md  pyproject.toml
docs/01-foundation/computer-networks/mini-demo/computer_networks_mini/: __init__.py  allreduce.py  congestion.py  demo.py  dns_lb.py  packet.py  router.py  topology.py  transport.py
docs/01-foundation/computer-networks/mini-demo/tests/: test_all.py
docs/01-foundation/distributed-systems/mini-demo/: README.md  pyproject.toml
docs/01-foundation/distributed-systems/mini-demo/distributed_systems_mini/: __init__.py  demo.py  logical_clock.py  network.py  quorum_store.py  raft.py  two_phase_commit.py  vector_clock.py
docs/01-foundation/distributed-systems/mini-demo/tests/: test_all.py
docs/01-foundation/gpu-cuda/mini-demo/: README.md  pyproject.toml
docs/01-foundation/gpu-cuda/mini-demo/gpu_cuda_mini/: __init__.py  arch.py  demo.py  kernel.py  memory.py  occupancy.py
docs/01-foundation/gpu-cuda/mini-demo/tests/: test_arch.py  test_kernel.py  test_memory.py  test_occupancy.py
docs/01-foundation/llm-from-zero/mini-demo/: README.md  pyproject.toml
docs/01-foundation/llm-from-zero/mini-demo/llm_from_zero/: __init__.py  bpe.py  model.py  sample.py  train.py
docs/01-foundation/llm-from-zero/mini-demo/tests/: test_bpe.py  test_model.py  test_train.py
docs/02-cloud-native/cni-csi/mini-demo/: README.md  conftest.py  pyproject.toml
docs/02-cloud-native/cni-csi/mini-demo/cni_csi_mini/: __init__.py  apiserver.py  clock.py  cni.py  csi.py  demo.py  kubelet.py  model.py
docs/02-cloud-native/cni-csi/mini-demo/tests/: test_apiserver.py  test_clock.py  test_cni.py  test_csi.py  test_demo.py  test_kubelet.py
docs/02-cloud-native/container-runtime/mini-demo/: README.md  conftest.py  pyproject.toml
docs/02-cloud-native/container-runtime/mini-demo/crt_mini/: __init__.py  cgroup.py  content.py  demo.py  engine.py  image.py  namespace.py  registry.py  runtime.py  snapshot.py
docs/02-cloud-native/container-runtime/mini-demo/tests/: test_cgroup.py  test_content.py  test_demo.py  test_engine.py  test_image.py  test_namespace.py  test_runtime.py  test_snapshot.py
docs/02-cloud-native/gpu-scheduling/mini-demo/: README.md  conftest.py  pyproject.toml
docs/02-cloud-native/gpu-scheduling/mini-demo/gpu_scheduling_mini/: __init__.py  apiserver.py  clock.py  demo.py  device_plugin.py  gang.py  kubelet.py  model.py  scheduler.py  topology.py
docs/02-cloud-native/gpu-scheduling/mini-demo/tests/: test_apiserver.py  test_clock.py  test_demo.py  test_device_plugin.py  test_gang.py  test_kubelet.py  test_scheduler.py  test_topology.py
docs/02-cloud-native/helm/mini-demo/: README.md  conftest.py  pyproject.toml
docs/02-cloud-native/helm/mini-demo/helm_mini/: __init__.py  action.py  chart.py  demo.py  engine.py  kube.py  release.py  storage.py  template.py  values.py  yaml_lite.py
docs/02-cloud-native/helm/mini-demo/tests/: test_demo.py  test_release_lifecycle.py  test_template.py  test_three_way_merge.py  test_values.py  test_yaml_lite.py
docs/02-cloud-native/kubernetes/mini-demo/: README.md  conftest.py  pyproject.toml
docs/02-cloud-native/kubernetes/mini-demo/k8s_mini/: __init__.py  apiserver.py  controller.py  demo.py  device_plugin.py  kubelet.py  model.py  observer.py  scheduler.py  store.py
docs/02-cloud-native/kubernetes/mini-demo/tests/: __init__.py  test_apiserver.py  test_controller.py  test_demo.py  test_gang.py  test_gpu.py  test_model.py  test_scheduler.py  test_store.py
docs/02-cloud-native/operator/mini-demo/: README.md  pyproject.toml
docs/02-cloud-native/operator/mini-demo/operator_mini/: __init__.py  apiserver.py  controller.py  demo.py  informer.py  model.py  platform.py  reconciler.py  workqueue.py
docs/02-cloud-native/operator/mini-demo/tests/: test_apiserver.py  test_demo.py  test_informer.py  test_reconciler.py  test_workqueue.py
docs/03-ai-platform/airflow/mini-demo/: README.md  pyproject.toml
docs/03-ai-platform/airflow/mini-demo/airflow_mini/: __init__.py  dag.py  demo.py  executor.py  parser.py  scheduler.py  state.py  triggerer.py  xcom.py
docs/03-ai-platform/airflow/mini-demo/tests/: test_dag.py  test_demo.py  test_executor.py  test_scheduler.py
docs/03-ai-platform/mlflow/mini-demo/: README.md  pyproject.toml
docs/03-ai-platform/mlflow/mini-demo/mlflow_mini/: __init__.py  demo.py
docs/03-ai-platform/mlflow/mini-demo/tests/: test_demo.py
docs/03-ai-platform/ray/mini-demo/: README.md  pyproject.toml
docs/04-llmops/llm-gateway/mini-demo/: README.md  pyproject.toml
docs/04-llmops/rl-post-training/mini-demo/: README.md  pyproject.toml
docs/04-llmops/sglang/mini-demo/: README.md  pyproject.toml
docs/04-llmops/tensorrt-llm/mini-demo/: README.md  pyproject.toml
docs/04-llmops/triton/mini-demo/: README.md  pyproject.toml
docs/04-llmops/vllm/mini-demo/: README.md  pyproject.toml
docs/05-agent/agent-os/mini-demo/: README.md  pyproject.toml
docs/05-agent/agent-runtime/mini-demo/: README.md  pyproject.toml
docs/05-agent/mcp/mini-demo/: README.md  pyproject.toml
docs/05-agent/memory/mini-demo/: README.md  pyproject.toml
docs/05-agent/multi-agent/mini-demo/: README.md  pyproject.toml
docs/05-agent/planning/mini-demo/: README.md  pyproject.toml
docs/05-agent/reflection/mini-demo/: README.md  pyproject.toml
docs/05-agent/tool-use/mini-demo/: README.md  pyproject.toml
docs/06-rag/mini-demo/: README.md  pyproject.toml
docs/06-rag/mini-demo/rag_mini/: demo.py  documents.py  embedder.py  generator.py  reranker.py  retriever.py  vector_store.py
docs/06-rag/mini-demo/tests/: test_demo.py  test_documents.py  test_embedder.py  test_generator.py  test_reranker.py  test_retriever.py  test_vector_store.py
docs/07-ai-sre/benchmark-evaluation/mini-demo/: README.md  pyproject.toml
docs/07-ai-sre/mini-demo/: README.md  pyproject.toml
docs/07-ai-sre/mini-demo/ai_sre_mini/: service.py  slo.py
docs/07-ai-sre/mini-demo/tests/: test_service.py  test_slo.py
(+870 files in other folders)
