[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-mini"
version = "0.1.0"
description = "A tiny, CPU-runnable RAG pipeline demo for the AI Infra Handbook."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
rag-demo = "rag_mini.demo:run_demo"

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_mini*"]
