[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-sre-mini"
version = "0.1.0"
description = "A tiny AI SRE demo with OpenTelemetry traces and Prometheus metrics."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-exporter-otlp>=1.20",
    "prometheus-client>=0.17",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.24"]

[project.scripts]
ai-sre-demo = "ai_sre_mini.service:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_sre_mini*"]
