[project]
name = "computer-networks-mini"
version = "0.1.0"
description = "A CPU-runnable computer networks mechanism simulator for AI Infra Handbook"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["computer_networks_mini*"]
