[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-cuda-mini"
version = "0.1.0"
description = "CPU-runnable GPU/CUDA execution model simulator for AI Infra Handbook"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["gpu_cuda_mini*"]
