[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-from-zero"
version = "0.1.0"
description = "A CPU-runnable mini demo for the AI Infra Handbook: LLM from zero."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "CC-BY-SA-4.0" }
authors = [
    { name = "AI Infra Handbook Contributors" }
]
dependencies = [
    "torch>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_from_zero*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
