[project]
name = "cni-csi-mini"
version = "0.1.0"
description = "微型 Kubernetes CNI/CSI 教学模拟器 —— 纯标准库重建网络与存储插件语义"
requires-python = ">=3.9"
dependencies = []  # 零第三方依赖：CNI/CSI 全部用标准库从零实现

[project.optional-dependencies]
dev = ["pytest>=7"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cni_csi_mini*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
