[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crt-mini"
version = "0.1.0"
description = "Container Runtime mini-demo — 容器运行时概念模拟器（纯 Python，确定性）"
requires-python = ">=3.9"
license = { text = "CC-BY-SA-4.0" }
readme = "README.md"

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
crt-mini-demo = "crt_mini.demo:run_demo"

[tool.setuptools]
packages = ["crt_mini"]

[tool.pytest.ini_options]
testpaths = ["tests"]
