[project]
name = "gpu-scheduling-mini"
version = "0.1.0"
description = "微型 Kubernetes GPU 调度教学模拟器 —— 纯标准库重建 Device Plugin / kubelet / scheduler / topology / gang 语义"
requires-python = ">=3.9"
dependencies = []  # 零第三方依赖：所有 GPU 调度组件用标准库从零实现

[project.optional-dependencies]
dev = ["pytest>=7"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gpu_scheduling_mini*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
