[project]
name = "mlflow-mini"
version = "0.1.0"
description = "Local MLflow mini-demo with SQLite backend and file artifact store"
requires-python = ">=3.10"
dependencies = [
    "mlflow>=2.20",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
