[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-gateway-mini"
version = "0.1.0"
description = "CPU-runnable mini demo of an LLM Gateway with routing, rate limiting, retries and fallback"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_gateway_mini*"]

[project.scripts]
llm-gateway-demo = "llm_gateway_mini.demo:run_demo"
