[project]
name = "tensorrt-llm-mini"
version = "0.1.0"
description = "A pure-Python teaching simulation of TensorRT-LLM Builder/Engine/Runtime/Executor."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["tensorrt_llm_mini*"]
