[project]
name = "triton-mini"
version = "0.1.0"
description = "A CPU-runnable Mini Triton Inference Server for educational purposes."
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["triton_mini*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
