[project]
name = "agent-os-mini"
version = "0.1.0"
description = "A CPU-runnable mini demo of Agent OS-like abstractions for multi-agent calculation."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
agent-os-demo = "agent_os_mini.demo:run_demo"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent_os_mini"]
