[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-mini"
version = "0.1.0"
description = "CPU-runnable mini demo of the Model Context Protocol: client, server, transport, session, and protocol messages"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_mini*"]

[project.scripts]
mcp-demo = "mcp_mini.demo:main"
