[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "planning-mini"
version = "0.1.0"
description = "CPU-runnable mini demo of an Agent Planning system: decomposition, DAG execution, observation, and dynamic replanning"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["planning_mini*"]

[project.scripts]
planning-demo = "planning_mini.demo:run_demo"
