[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tool-use-mini"
version = "0.1.0"
description = "CPU-runnable mini demo of LLM Tool Use mechanics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
tool-use-demo = "tool_use_mini.demo:run_demo"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
