[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchmark-evaluation-mini"
version = "0.1.0"
description = "CPU-runnable benchmark and evaluation framework mini-demo for AI Infra Handbook"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
